# 6-dof-simulator

./: .gitignore  CMakeLists.txt  README.md
Examples/: manouvre_plan_example.cc  rpy_maneuvers.cc  vertical_takeoff_example.cc
dependencies/: CMakeLists.txt
drone_models/: fixed_wing  jmav  small
src/: Ailerons.cc  Ailerons.h  Drone.cc  Drone.h  DroneSensors.cc  DroneSensors.h  FlatEarth.cc  FlatEarth.h  IrisQuadController.cc  IrisQuadController.h  Propellers.cc  Propellers.h  Simulator.cc  Simulator.h  StandaloneDrone.cc  StandaloneDrone.h  main.cc
src/ClassExtensions/: APM_Extension.h  Aerodynamics_Extension.h  FixedWingEOM_Extension.h  MatrixXd_Extension.h  MixedEOM_Extension.h  ThrustFixedWing_Extension.h  ThrustQuadrotor_Extension.h  Weight_Extension.h
src/Containers/: DroneConfig.h
src/Controllers/: SimpleFixedWingController.cc  SimpleFixedWingController.h
src/ESCs/: FixedWingESC.h  SimpleFixedWingESC.h
src/ForceModels/: ThrustQuadrotor.h  Weight.h
src/Helpers/: constants.h  gps_utils.h  http_req.h  magnetic_field_lookup.cc  rotation_utils.h
src/Interfaces/: AsyncDroneControl.h  Clock.h  DataSender.h  DroneControl.h  DroneStateEncoder.h  DroneStateProcessor.h  DynamicObject.h  Environment.h  EnvironmentObject.h  MAVLinkConnection.h  MAVLinkMessageHandler.h  MAVLinkMessageRelay.h  MAVLinkSystem.h  Sensors.h  Simulation.h  TimeHandler.h
src/Logging/: ConsoleLogger.cc  ConsoleLogger.h  DroneStateLogger.h  GodotRouter.h
src/Sockets/: MAVLinkConnectionHandler.cc  MAVLinkConnectionHandler.h  TCPAcceptor.cc  TCPAcceptor.h  TCPConnection.cc  (+3 more)
(+1 files in other folders)
